--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue-multiselect@2.1.6/dist/vue-multiselect.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-form-generator@2.3.4/dist/vfg.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.0/marked.min.js"></script>
+    
     <script>
       var AUTH_API = 'http://localhost:3001/local'
       var API = 'http://localhost:3002'
