--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.1.3/vue-router.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.3.0/dist/bootstrap-vue.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.3.0/dist/bootstrap-vue.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/vuelidate@0.7.5/dist/vuelidate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuelidate@0.7.5/dist/validators.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/vue-toast-notification"></script>
     <link href="https://cdn.jsdelivr.net/npm/vue-toast-notification/dist/index.css" rel="stylesheet">
 
