--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.1.3/vue-router.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-meta@2.3.3/dist/vue-meta.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.3.0/dist/bootstrap-vue.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.3.0/dist/bootstrap-vue.css">
