--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
       axios.defaults.withCredentials = true
     </script>
     <script src="/main.js" type="module"></script>
+    <style>
+      .row img {
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
