--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.0/marked.min.js"></script>
 
     <script>
-      var AUTH_API = 'http://localhost:3001/local'
-      var API = 'http://localhost:3000'
+      var API = 'http://app.local/api'
       axios.defaults.withCredentials = true
     </script>
     <script src="/main.js" type="module"></script>
